@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: Prevent adding columns with restricted names to dynamic objects
+
  - Fixed NPE in the ``percentile`` aggregation fucntion. The NPE was occurring
    in case when queried shards have no records.
 
@@ -12,7 +14,7 @@ Unreleased
    when `where` uses `=` with `primary key` and an order by which is
    also part of the selected fields is used.
 
- -  Fixed adding a column to an existing object array using `ALTER TABLE`
+ - Fixed adding a column to an existing object array using `ALTER TABLE`
 
  - Log unhandled HTTP related exceptions as `debug` instead of `error`.
 
